Supplier Simplified