@@ -1,8 +1,7 @@
 package exemplos.Supplier;
 
 import java.util.List;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
+// import java.util.function.Supplier;
 import java.util.stream.Stream;
 
 //Rerepsenta uma operação que não aceita nenhum argumento e retorna um resultado do tipo T (any)
@@ -12,15 +11,14 @@ public class SupplierExemple {
 
     public static void main(String[] args) {
         //usar supplier com espressão lambda para fornecer uma saudação personalizada
-        Supplier<String> saudacao = () -> "Olá Como vai você?";
+        // Supplier<String> saudacao = () -> "Olá Como vai você?";
 
         //usar o Supplier para obter uma lista com 5 saudações
-        List<String> listaSaudacoes = Stream.generate(saudacao)
+        List<String> listaSaudacoes = Stream.generate(() ->  "Olá Como vai você?")
         .limit(5)
-        .collect(Collectors.toList()); 
+        .toList(); 
 
-        listaSaudacoes.forEach( s -> System.out.println(s));
+        listaSaudacoes.forEach(System.out::println);
         
-
     }
 }
